# asciibench

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LEADERBOARD.md  LICENSE  PLAN-swiss-tournament.md  PR_REVIEW_FIX_GUIDE.md  README.md  SPECIFICATION.md  Taskfile.yml  biome.json  config.yaml  evaluator_config.yaml  improvements.md  models.yaml  package-lock.json  package.json  pr-review-comments.md  prompts.yaml  pyproject.toml  pytest.ini  tailwind.config.js
.agents/tasks/: prd-asciibench-structure.json
.github/workflows/: ci.yml
.ralph/: loader-code-location.md  progress.md
.ralph/.tmp/: prd-prompt-20260130-122149-80808.md  prd-prompt-20260130-122452-84041.md  prompt-20260130-123401-97774-1.md  prompt-20260130-123401-97774-2.md  prompt-20260130-123401-97774-3.md  prompt-20260130-123401-97774-4.md  prompt-20260130-123401-97774-5.md  prompt-20260130-123401-97774-6.md  prompt-20260130-123401-97774-7.md  prompt-20260130-123401-97774-8.md  prompt-20260130-123401-97774-9.md  story-20260130-123401-97774-1.json  story-20260130-123401-97774-1.md  story-20260130-123401-97774-2.json  story-20260130-123401-97774-2.md  story-20260130-123401-97774-3.json  story-20260130-123401-97774-3.md  story-20260130-123401-97774-4.json  story-20260130-123401-97774-4.md  story-20260130-123401-97774-5.json  story-20260130-123401-97774-5.md  story-20260130-123401-97774-6.md  story-20260130-123401-97774-7.json  story-20260130-123401-97774-8.json  story-20260130-123401-97774-8.md  story-20260130-123401-97774-9.json  story-20260130-123401-97774-9.md
.ralph/runs/: run-20260130-123401-97774-iter-1.md  run-20260130-123401-97774-iter-2.md  run-20260130-123401-97774-iter-3.md  run-20260130-123401-97774-iter-4.md  run-20260130-123401-97774-iter-5.md  run-20260130-123401-97774-iter-6.md  run-20260130-123401-97774-iter-7.md  run-20260130-123401-97774-iter-8.md
asciibench/analyst/: bootstrap_analyzer.py  convergence_analyzer.py  elo.py  errors.py  leaderboard.py  main.py  pairwise_significance_analyzer.py  ranking_stability_analyzer.py  stability.py  stability_models.py  stats.py
asciibench/common/: api_exceptions.py  config.py  config_service.py  display.py  domino.py  loader.py  logging.py  models.py  observability.py  persistence.py  (+5 more)
data/: rankings.csv  rankings.json
demo_outputs/: demo.html  results.json
docs/: async-queue-implementation-plan.md  code-quality-analysis.md
scripts/: verify_no_duplicates.sh
templates/: base.html  index.html  judge.html
tests/: test_analytics_service.py  test_bootstrap_analyzer.py  test_client.py  test_concurrent_generation.py  test_config.py  test_config_service.py  test_demo.py  test_display.py  test_domino.py  test_elo.py  test_evaluator.py  test_generation_service.py  test_generator_main.py  test_integration.py  test_judge_ui.py  test_leaderboard.py  test_loader.py  test_logging.py  test_models.py  test_observability.py  test_persistence.py  test_progress_service.py  test_ranking_stability_analyzer.py  test_repository.py  test_retry.py  test_sampler.py  test_sanitizer.py  test_selectors.py  test_similarity.py  test_simple_display.py  test_single_model_debug.py  test_single_model_whitespace.py  test_stability.py  test_state.py  test_stats.py  test_subject_extractor.py  test_swiss_selector.py  test_tournament_service.py  test_wave_text.py  test_whitespace_diagnosis.py  (+1 more)
(+97 files in other folders)
